--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#16a34a",
   "icons": [
     {
-      "src": "https://placehold.co/192x192/16a34a/white?text=Nura",
+      "src": "icons/favicon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/512x512/16a34a/white?text=Nura",
+      "src": "icons/favicon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
